# pandoc-filter

./: .gitignore  README.md  RELEASE.md  coverage.xml  pyproject.toml  test.py
.github/workflows/: build.yml  build_and_deploy.yml  build_and_test.yml  deploy.yml  local_test.yml  post_deploy_test.yml  prerelease.yml  test.yml  test_and_build.yml
examples/: md2html_normalize_anchors_internal_links_and_link-like_strings.md  md2html_normalize_headers_anchors_internal_links_and_link-like_strings.md  md2md_adapt_ams_rule_for_math_formula.md  md2md_convert_github_style_alert_to_hexo_style_alert_filter.md  md2md_normalize_footnotes.md  md2md_normalize_internal_link.md  md2md_sync_local_images_to_`Aliyun OSS`.md  md2md_sync_local_images_to_`Aliyun_OSS`.md
helper/: build.ps1  local_build.ps1  local_test.ps1  test.ps1
resources/: test_md2html_anchor_and_link.md  test_md2md_figure.md  test_md2md_footnote.md  test_md2md_internal_link.md  test_md2md_math.md
resources/inputs/: test.py  test_md2html_footnote.md  test_md2html_header_anchor_and_link.md  test_md2html_header_anchor_and_link_gfm.md  test_md2md_alert.md  test_md2md_date_and_update.md  test_md2md_figure.md  test_md2md_footnote.md  test_md2md_internal_link.md  test_md2md_math.md
resources/outputs/: test_md2html_anchor_and_link.html  test_md2html_footnote.html  test_md2html_header_anchor_and_link.html  test_md2html_header_anchor_and_link_gfm.html  test_md2md_alert.md  test_md2md_date_and_update.md  test_md2md_figure.md  test_md2md_footnote.md  test_md2md_internal_link.md  test_md2md_math.md
scripts/: build.ps1  check_release_version.ps1  check_release_version.py  commit_and_push.ps1  conda_config.ps1  config.ps1  local_build.ps1  local_test.ps1  requirements.txt  tag_and_push.ps1  test.ps1  test_and_build.ps1
scripts/etc/: conda_env_dev_linux.yml  conda_env_dev_windows.yml  environment.yml
src/: __init__.py
src/pandoc_filter/: __init__.py  md2md_filters.py  scripts.py  version.py
src/pandoc_filter.egg-info/: PKG-INFO
src/pandoc_filter/actions/md2html/: __init__.py  anchor.py  figure.py  link_like.py
src/pandoc_filter/actions/md2md/: __init__.py  figure.py  footnote.py  internal_link.py  math.py
src/pandoc_filter/filters/md2html/: __init__.py  anchor.py  anchor_and_link.py  centerlize_figure.py  figure.py  hash_anchor_and_internal_link.py  internal_link.py  link_like.py
src/pandoc_filter/filters/md2md/: __init__.py  add_date_and_update.py  convert_github_style_alert_to_hexo_style_alert.py  figure.py  footnote.py  internal_link.py  math.py  norm_footnote.py  upload_figure_to_aliyun.py
src/pandoc_filter/run_filters/md2html/: anchor_and_link.py  figure.py
src/pandoc_filter/run_filters/md2md/: figure.py  footnote.py  internal_link.py  link.py  math.py
src/pandoc_filter/utils/: hash_helper.py  logging_helper.py  oss_helper.py
src/pandoc_filter/utils/legacy/: md2md_filters.py
temp/: test_md2md_internal_link.md
tests/: pandoc_md2html_filter.py  pandoc_md2md_filter.py  test_md2html_filters.py  test_md2md_filters.py  test_md2md_filters_figure.py  text.md
