[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pandoc_filter"
authors = [
    {name = "Pu Zhao", email = "zhaopudark@outlook.com"},
]
description = "A customized pandoc filters set that can be used to generate a useful pandoc python filter."
readme = "README.md"
version = "0.0.6"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "typeguard",
    "packaging",
    "alive-progress",
    "panflute",
    "oss2",
    "bs4",
    "oauth2client"
]
# OR
[tool.setuptools.packages.find]
# # All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["pandoc_filter*"]  # ["*"] by default 都是相对于where的路径的pattern
exclude = ["__pycache__"]  # empty by default 都是相对于where的路径的pattern
# namespaces = false  # true by default  禁用命名空间包会组织识别到不带有__init__.py的包
[project.urls]
Homepage = "https://github.com/Zhaopudark/pandoc-filter"
Issues = "https://github.com/Zhaopudark/pandoc-filter/issues"